# mikado

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mikado.cabal  package.yaml  stack.yaml
app/: Main.hs
exes/: Main.hs
src/: Mikado.hs
