Name:                   mikado
Version:                0.0.1
Author:                 Eric Nedervold<nedervoldsoftware@gmail.com>
Maintainer:             Eric Nedervold<nedervoldsoftware@gmail.com>
License:                BSD3
License-File:           LICENSE
Copyright:              (c) 2015 Eric Nedervold
Stability:              alpha
Homepage:               http://github.com/nedervold/mikado
Bug-Reports:            http://github.com/nedervold/mikado/issues
-- Category:
-- Synopsis:
-- Description:
Cabal-Version:          >= 1.10
Build-Type:             Simple
Extra-Source-Files:     Makefile
                      , changelog

Library
  Default-Language:     Haskell2010
  HS-Source-Dirs:       src
  GHC-Options:          -Wall
  Exposed-Modules:      Mikado
--  Other-Modules:        Mikado.Internal
  Build-Depends:        base >= 4 && < 5
                      , containers
                      , fgl
                      , graphviz
                      , mtl
                      , text

Executable mikado
  Default-Language:     Haskell2010
  GHC-Options:          -Wall
--  Other-Modules:
  Hs-Source-Dirs:       exes
  Main-Is:              Main.hs
  Build-Depends:        base
                      , mikado

-- Test-Suite test
--   Type:                 exitcode-stdio-1.0
--   Default-Language:     Haskell2010
--   Hs-Source-Dirs:       tests
--   Ghc-Options:          -Wall
--   Main-Is:              Test.hs
--   Other-Modules:        MikadoTests
--   Build-Depends:        base
--                       , HUnit
--                       , test-framework
--                       , test-framework-hunit

Source-Repository head
  Type:                 git
  Location:             https://github.com/nedervold/mikado.git


